--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
         </ul>
 
-        <button type="button" class="header-button">
+        <button type="button" class="header-button js-open-menu">
           <svg class="icon-burger" width="28" height="28">
             <use href="./img/icons.svg#icon-burger"></use>
           </svg>
@@ -74,11 +74,11 @@
       </div>
     </header>
 
-    <div class="mob-menu is-open">
+    <div class="mob-menu js-menu-container">
       <div class="container mob-container">
         <div class="mob-logo-wrap">
           <a href="" class="logo">yachtjet</a>
-          <button type="button" class="header-button mob-btn">
+          <button type="button" class="header-button mob-btn js-close-menu">
             <svg class="icon-close" width="16" height="16">
               <use href="./img/icons.svg#icon-close"></use>
             </svg>
@@ -86,7 +86,7 @@
         </div>
         <nav class="mobile-nav">
           <ul class="mob-list">
-            <li class="mob-item">
+            <li class="mob-item part">
               <a class="mob-nav-link" href="">ABOUT</a>
             </li>
             <li class="mob-item">
@@ -100,7 +100,7 @@
         <ul class="mob-icon-list">
           <li class="icon-list-item">
             <a href="https://www.instagram.com/goitclub/" target="_blank">
-              <svg class="header-icon mob-icon" width="24" height="24">
+              <svg class="mob-icon" width="24" height="24">
                 <use href="./img/icons.svg#icon-instagram"></use>
               </svg>
             </a>
@@ -108,7 +108,7 @@
 
           <li class="icon-list-item">
             <a href="https://www.youtube.com/c/GoIT" target="_blank">
-              <svg class="header-icon mob-icon" width="24" height="24">
+              <svg class="mob-icon" width="24" height="24">
                 <use href="./img/icons.svg#icon-youtube"></use>
               </svg>
             </a>
@@ -116,7 +116,7 @@
 
           <li class="icon-list-item">
             <a href="https://www.facebook.com/goITclub/" target="_blank">
-              <svg class="header-icon mob-icon" width="24" height="24">
+              <svg class="mob-icon" width="24" height="24">
                 <use href="./img/icons.svg#icon-facebook"></use>
               </svg>
             </a>
@@ -125,5 +125,11 @@
       </div>
     </div>
     <script type="module" src="./main.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
